--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </header>
     
     <main>
+        <h2>esto es una prueba de GIT</h2>
         <section>
             <div class="introduction">
                 <h1>Sm Cosmeticos</h1>
