--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,73 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto SM</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
-    
+    <script src="https://kit.fontawesome.com/979173d597.js" crossorigin="anonymous"></script>
 </head>
 
 
 <body>
-    <header>
-        <nav>
-            <img class="logo" src="../img/sm cosmeticos (2).png" alt="">
-            <ul class="navbar">
-                <li><a class="seccionesNav" href="../index.html">Inicio</a></li>
-                <li><a class="seccionesNav" href="productos.html">Productos</a></li>
-                <li><a class="seccionesNav" href="promociones.html">Promociones</a></li>
-                <li><a class="seccionesNav" href="acerca.html">Acerca</a></li>
-                <li><a class="seccionesNav" href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section>
-            <article>
-                <form action="#">
-                    <p>Formulario de contacto:</p>
-                    <br>
-                    <label for="nombre">Nombre</label>
-                    <input type="nombre" id="nombre" name="nombre"><br>
-                    <br>
-                    <label for="email">Email:
-                    <input type="email" id="email" name="email"><br>
-                    <br>
-                    </label>
-                    <label for="InfoAdicional">Info Adicional:<br>
-                    <textarea id="InfoAdicional" name="InfoAdicional" placeholder="Escriba aquí..."cols="50" rows="5"></textarea>
-                    </label>
-                    <br>
-                    <label for="edad">Edad:</label>
-                    <input type="number" id="edad" name="edad"><br>
-                    <p>Te pediremos que indiques género, para así poder</p>
-                    <p>enviarte promociones acordes a tu perfil.</p>
-                    <label for="lado">Hombre</label>
-                    <input type="radio" name="lado" value="izquierda">
-                    <label for="lado">Mujer</label>
-                    <input type="radio" name="lado" value="derecha">
-                    <p>Que Producto te gustaria adquirir?</p>
-                    <select name="letra" id="letra"> 
+    <section class="wrapper">
+        <header class="navbar">
+            <h1 class="mainLogo">SM</h1>
+            <nav class="nav"> 
+                <ul class="navResponsive">
+                    <div class="navLiContainer">
+                        <li><i class="fa-solid fa-house"></i><a class="sections"  href="../index.html">Inicio</a></li>
+                        <li><i class="fa-solid fa-cart-shopping"></i><a class="sections"  href="./productos.html">Productos</a></li>
+                        <li><i class="fa-solid fa-tag"></i><a class="sections"  href="./promociones.html">Promociones</a></li>
+                        <li><i class="fa-solid fa-circle-info"></i><a class="sections"  href="./acerca.html">Acerca</a></li>
+                        <li><i class="fa-solid fa-address-book"></i><a class="sections"  href="./contacto.html">Contacto</a></li>
+                    </div>
+                </ul>
+            </nav>
+        </header>   
+        
+        <main>
+            <section class="contactForm">
+                <article>
+                    <form action="#">
+                        <p>Formulario de contacto:</p>
+                        <br>
+                        <label for="nombre">Nombre</label>
+                        <input type="nombre" id="nombre" name="nombre"><br>
+                        <br>
+                        <label for="email">Email:
+                        <input type="email" id="email" name="email"><br>
+                        <br>
+                        </label>
+                        <label for="InfoAdicional">Info Adicional:<br>
+                        <textarea id="InfoAdicional" name="InfoAdicional" placeholder="Escriba aquí..."cols="50" rows="5"></textarea>
+                        </label>
+                        <br>
+                        <label for="edad">Edad:</label>
+                        <input type="number" id="edad" name="edad"><br>
+                        <p>Te pediremos que indiques género, para así poder</p>
+                        <p>enviarte promociones acordes a tu perfil.</p>
+                        <label for="lado">Hombre</label>
+                        <input type="radio" name="lado" value="izquierda">
+                        <label for="lado">Mujer</label>
+                        <input type="radio" name="lado" value="medio">
+                        <label for="lado">Prefiero no decirlo</label>
+                        <input type="radio" name="lado" value="derecha">
+                        <p>Que Producto te gustaria adquirir?</p>
+                        <select name="letra" id="letra"> 
                         <option value="Labiales">Labiales</option>
                         <option value="Sombras">Sombras</option>
                         <option value="Fragancias">Fragancias</option>
-                    </select>
-                    <div>Quieres recibir notificaciones sobre Ofertas o Lanzamientos?
-                    <input type="checkbox" name="acepta" value="1"></div>
-                    <input type="submit" value="Enviar">
-                    <input type="reset" value="Restaurar información">
-                </form>
-            </article>
-        </section>
-    </main>
+                        </select>
+                        <div>Quieres recibir notificaciones sobre Ofertas o Lanzamientos?
+                        <input type="checkbox" name="acepta" value="1"></div>
+                        <input type="submit" value="Enviar">
+                        <input type="reset" value="Restaurar información">
+                    </form>
+                </article>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="footerIcons">
+                <a target="_blank" href="https://www.instagram.com/?hl=es-la"><img class="iconosFooter" src="../img/instagram.png" alt="enlace a chat de instagram"></a>
+                <a target="_blank" href="https://www.youtube.com/"><img class="iconosFooter" src="../img/youtube.png" alt="enlace a youtube"></a>
+                <a target="_blank" href="https://wa.me/543794041557"><img class="iconosFooter" src="../img/whatsapp.png" alt="enlace a chat de whatsapp"></a>
+            </div> 
+        </footer>
+</section>
 
-    <footer>
-        <div class="iconosBox">
-            <figure>
-                <a target="_blank" href="https://www.instagram.com/?hl=es-la"><img class="iconosFooter" src="../img/instagram.png" alt=""></a>
-                <a target="_blank" href="https://www.youtube.com/"><img class="iconosFooter" src="../img/youtube.png" alt=""></a>
-                <a target="_blank" href="https://wa.me/543794041557"><img class="iconosFooter" src="../img/whatsapp.png" alt=""></a>
-            </figure>                    
-        </div>     
-    </footer>
+
 </body>
 </html>
