--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -16,7 +16,7 @@
     <section class="wrapper">
         <header class="navbar">
             <h1 class="mainLogo">SM</h1>
-            <nav class="nav"> 
+            <nav> 
                 <ul class="navResponsive">
                     <div class="navLiContainer">
                         <li><i class="fa-solid fa-house"></i><a class="sections"  href="../index.html">Inicio</a></li>
@@ -33,6 +33,9 @@
             <section>
                 <div class="ourProductsText">
                     <h2 class="productsText">Nuestros productos</h2>
+                </div>
+                <div class="coming-soon">
+                    <img src="../img/comingsoon.jpg" alt="Proximamente">
                 </div>
                 
             </section>
