--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://kit.fontawesome.com/979173d597.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
     <section class="wrapper">
         <header class="navbar">
             <h1 class="mainLogo">SM</h1>
-            <nav class="nav"> 
+            <nav> 
                 <ul class="navResponsive">
                     <div class="navLiContainer">
                         <li><i class="fa-solid fa-house"></i><a class="sections" target="_blank" href="index.html">Inicio</a></li>
