--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sm Cosmeticos</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -19,11 +22,11 @@
             <nav> 
                 <ul class="navResponsive">
                     <div class="navLiContainer">
-                        <li><i class="fa-solid fa-house"></i><a class="sections" target="_blank" href="index.html">Inicio</a></li>
-                        <li><i class="fa-solid fa-cart-shopping"></i><a class="sections" target="_blank" href="secciones/productos.html">Productos</a></li>
-                        <li><i class="fa-solid fa-tag"></i><a class="sections" target="_blank" href="secciones/promociones.html">Promociones</a></li>
-                        <li><i class="fa-solid fa-circle-info"></i><a class="sections" target="_blank" href="secciones/acerca.html">Acerca</a></li>
-                        <li><i class="fa-solid fa-address-book"></i><a class="sections" target="_blank" href="secciones/contacto.html">Contacto</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-house"></i><a class="sections" href="index.html">Inicio</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-cart-shopping"></i><a class="sections" href="secciones/productos.html">Productos</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-tag"></i><a class="sections" href="secciones/promociones.html">Promociones</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-circle-info"></i><a class="sections" href="secciones/acerca.html">Acerca</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-address-book"></i><a class="sections" href="secciones/contacto.html">Contacto</a></li>
                     </div>
                 </ul>
             </nav>
@@ -31,7 +34,7 @@
         
         <main class="main">
             <section class="introductionSection">
-                <div class="introduction">
+                <div class="animate__animated animate__backInLeft introduction">
                     <h1 class="mainHeading">Sm Cosmeticos</h1>
                     <p class="slogan">Tenemos la solución estética para lo que buscas.</p>
                 </div>
