--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -19,11 +19,11 @@
             <nav> 
                 <ul class="navResponsive">
                     <div class="navLiContainer">
-                        <li><i class="fa-solid fa-house"></i><a class="sections"  href="../index.html">Inicio</a></li>
-                        <li><i class="fa-solid fa-cart-shopping"></i><a class="sections"  href="./productos.html">Productos</a></li>
-                        <li><i class="fa-solid fa-tag"></i><a class="sections"  href="./promociones.html">Promociones</a></li>
-                        <li><i class="fa-solid fa-circle-info"></i><a class="sections"  href="./acerca.html">Acerca</a></li>
-                        <li><i class="fa-solid fa-address-book"></i><a class="sections"  href="./contacto.html">Contacto</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-house"></i><a class="sections"  href="../index.html">Inicio</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-cart-shopping"></i><a class="sections"  href="./productos.html">Productos</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-tag"></i><a class="sections"  href="./promociones.html">Promociones</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-circle-info"></i><a class="sections"  href="./acerca.html">Acerca</a></li>
+                        <li class="list-nav"><i class="fa-solid fa-address-book"></i><a class="sections"  href="./contacto.html">Contacto</a></li>
                     </div>
                 </ul>
             </nav>
