--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sm Cosmeticos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -13,22 +14,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://kit.fontawesome.com/979173d597.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
     <section class="wrapper">
-        <header class="navbar">
-            <h1 class="mainLogo">SM</h1>
-            <nav> 
-                <ul class="navResponsive">
-                    <div class="navLiContainer">
-                        <li class="list-nav"><i class="fa-solid fa-house"></i><a class="sections" href="index.html">Inicio</a></li>
-                        <li class="list-nav"><i class="fa-solid fa-cart-shopping"></i><a class="sections" href="secciones/productos.html">Productos</a></li>
-                        <li class="list-nav"><i class="fa-solid fa-tag"></i><a class="sections" href="secciones/promociones.html">Promociones</a></li>
-                        <li class="list-nav"><i class="fa-solid fa-circle-info"></i><a class="sections" href="secciones/acerca.html">Acerca</a></li>
-                        <li class="list-nav"><i class="fa-solid fa-address-book"></i><a class="sections" href="secciones/contacto.html">Contacto</a></li>
+        <header class="navbar1">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <span class="navbar-brand mb-0 h1">SM</span>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./secciones/productos.html">Productos</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="./secciones/acerca.html">Acerca</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./secciones/promociones.html">Promociones</a>
+                            </li>
+                        </ul>
                     </div>
-                </ul>
+                </div>
             </nav>
         </header>
         
@@ -79,5 +93,7 @@
             </div> 
         </footer>
     </section>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
