--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./secciones/productos.html">Productos</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item">
                                 <a class="nav-link" href="./secciones/acerca.html">Acerca</a>
                             </li>
                             <li class="nav-item">
