--- a/secciones/acerca.html
+++ b/secciones/acerca.html
@@ -17,25 +17,28 @@
 <body>
     <section class="wrapper">
         <header class="navbar1">
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg p-3">
                 <div class="container-fluid">
-                    <span class="navbar-brand mb-0 h1">SM</span>
+                    <img src="../img/LOGO.png" width="150px" height="150px" alt="">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav me-auto mb-2 fw-semibold">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link link-dark" aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./productos.html">Productos</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="./acerca.html">Acerca</a>
+                                <a class="nav-link link-dark" href="./productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./promociones.html">Promociones</a>
+                                <a class="nav-link link-dark" href="./acerca.html">Acerca</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link-dark" href="./contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link-dark" href="./promociones.html">Promociones</a>
                             </li>
                         </ul>
                     </div>
