--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -17,25 +17,28 @@
 <body>
     <section class="wrapper">
         <header class="navbar1">
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg p-3" >
                 <div class="container-fluid">
-                    <span class="navbar-brand mb-0 h1">SM</span>
+                    <img src="../img/LOGO.png" width="150px" height="150px" alt="">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav me-auto mb-2 fw-semibold">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link link-dark" aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./productos.html">Productos</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="./acerca.html">Acerca</a>
+                                <a class="nav-link link-dark" href="./productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./promociones.html">Promociones</a>
+                                <a class="nav-link link-dark" href="./acerca.html">Acerca</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link-dark" href="./contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link-dark" href="./promociones.html">Promociones</a>
                             </li>
                         </ul>
                     </div>
@@ -44,6 +47,75 @@
         </header>   
         
         <main>
+            <form class="m-5 p-3 bg-light bg-gradient">
+                <p class="fs-4 text-center">Formulario de contacto</p>
+                <div class="row mb-5">
+                    <label for="inputName3" class="col-sm-2 col-form-label">Nombre/s</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="inputName3" required>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <label for="inputSurname3" class="col-sm-2 col-form-label">Apellido/s</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="inputSurname3" required>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-9">
+                        <input type="email" class="form-control" id="inputEmail3" required>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <label for="inputText3" class="col-sm-2 col-form-label">Comentario</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="inputText3" placeholder="Escriba un comentario adicional aquí..." required>
+                    </div>
+                </div>
+                <fieldset class="row mb-5">
+                    <legend class="col-form-label col-sm-2 pt-0">Motivo de contacto</legend>
+                    <div class="col-sm-9">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                            <label class="form-check-label" for="gridRadios1">
+                                Dudas/Consultas
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                            <label class="form-check-label" for="gridRadios2">
+                                Oferta de trabajo
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                            <label class="form-check-label" for="gridRadios3">
+                                Quejas
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                            <label class="form-check-label" for="gridRadios3">
+                                Otro
+                            </label>
+                        </div>
+                    </div>
+                </fieldset>
+                <div class="row mb-5">
+                    <div class="col-sm-10 offset-sm-0">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1" required>
+                            <label class="form-check-label" for="gridCheck1">
+                                Acepto enviar mi información a Sm Cosmeticos
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+</form>
+
+            <!--  
             <section class="contactForm">
                 <article>
                     <form action="#">
@@ -83,6 +155,7 @@
                     </form>
                 </article>
             </section>
+            -->
         </main>
         <footer class="footer">
             <div class="footerIcons">
