--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
                     <img class="products" src="./img/perfumeAuthenticHero.jpeg" alt="">
                     <img class="products" src="./img/perfumeUpscaleBlack.jpeg" alt="">
                     <img class="products" src="./img/perfumeUpscaleMk.jpeg" alt="">
-                    <img class="products" width="576" height="1280" src="./img/perfumesDiamonds.jpeg" alt="">
+                    <img class="products" src="./img/perfumesDiamonds.jpeg" alt=""> 
+                    <img class="products" src="./img/permuneGentleman.jpeg" alt="">
+                    <img class="products" src="./img/perfumeBlushScent.jpeg" alt="">
+                    
                 </div>
             </section>
             <section class="locationSection">
